[project]
name = "fapi-sdp"
version = "0.1.0"
description = ""
authors = [
    {name = "deb12",email = "unnmd88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "asyncssh (==2.17.0)",
    "paramiko (==3.4.0)",
    "aiohttp (==3.10.3)",
    "pysnmp (==6.2.4)",
    "pyasn1 (==0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

