[project]
name = "fapi-sdp"
version = "0.1.0"
description = ""
authors = [
    {name = "deb12",email = "unnmd88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "asyncssh (==2.17.0)",
    "paramiko (==3.4.0)",
    "aiohttp (==3.10.3)",

    "faker (>=36.1.1,<37.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pysnmp (>=7.1.16,<8.0.0)",
    "pysmi (>=1.5.11,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

